# mondir

./: .flake8  .gitlab-ci.yml  LICENSE  README.md  fisyte_resources_anchor.py  jinja2_extension.py  poc.py  pyproject.toml
doc/: api.rst  conf.py  index.rst  installation.rst  reference.rst  templates.rst  tutorial.rst
doc/_static/: custom.css
examples/greetings/: for-{{ recipient|lower }}.txt  index.txt
examples/many-modules-1/: {{ module_name }}.py
examples/many-modules-2/: template.py
examples/many-modules-3/: .fisyte.yml  template.py
fisyte/: api.py  jinja2_extension.py  jinja2_loaders.py
fisyte/jinja2/: extension.py  utils.py
fisyte/utils/: jinja2.py  pseudo_list.py
mondir/: __init__.py  api.py
mondir/jinja2/: extension.py  loaders.py
mondir/utils/: path.py
terraform/: example-env
tests/: test_api.py  test_jinja2_extension.py
tests/data/expected-outputs/greetings/: for-graham.txt  for-terry.txt  list-of-2-greetings.txt
tests/jinja2/: test_extension.py
tests/utils/: parametrization.py
