[tool.poetry]
name = "fisyte"
version = "0.1.0"
description = "Filesystem-level templating using Jinja2"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
