[tool.poetry]
name = "mondir"
version = "0.2.0"
description = "Directory/filesystem-level templating using Jinja2"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/mondir/"
repository = "https://gitlab.com/smheidrich/mondir"
documentation = "https://smheidrich.gitlab.io/mondir/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.2"
jaraco-classes = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-parametrization = "^2022.2.1"
black = "^23.7.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.1.2"
insipid-sphinx-theme = "^0.4.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
